# owl-akrida

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVREADME.md  Dockerfile  Dockerfile.vdr  LICENSE  MAINTAINERS.md  README.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.issuer.yml  docker-compose.vdr-local.yml  docker-compose.yml  master.docker-compose.yml  package-lock.json  package.json  sample.demo.env  sample.env  sample.vdr.env  temp.txt  worker.docker-compose.yml
.github/: dependabot.yml
.github/workflows/: publish.yml
adapters/: README.md
adapters/webvh/: .env.example  Dockerfile  docker-compose.yml  locustClient.py  pyproject.toml  settings.py  utils.py  web_ui.py
adapters/webvh/agents/: base.py
adapters/webvh/agents/holder/: Dockerfile  agent.py  configs.yml
adapters/webvh/agents/issuer/: agent.py  configs.yml
adapters/webvh/client/: locustfile.py  pyproject.toml  settings.py
adapters/webvh/client/locustfiles/: register.py
adapters/webvh/controllers/: __init__.py  holder.py  issuer.py
adapters/webvh/docker/caddy/: Caddyfile
adapters/webvh/docker/holder/: Dockerfile
adapters/webvh/interface/: __init__.py  main.py  storage.py
adapters/webvh/interface/templates/: config.jinja  index.jinja  report-modal.jinja
adapters/webvh/locustfiles/: __init__.py  anonCredsIssue.py  anonCredsRevoke.py  anonCredsVerify.py  anoncreds.py  dataIntegrityIssue.py  dataIntegrityRevoke.py  didRegister.py  registerDid.py
adapters/webvh/models/: protocols.py
docs/: CHECKLIST.md  CLUSTERED.md  CUSTOMIZATION.md  DEBUGGING.md  DESIGN.md  NONCLUSTERED.md  QUICKSTART.md  RUNNING.md  VDR.md  VM.md
instance-configs/acapy-agent/: README.md  docker-compose.yml  pyproject.toml  sample.env
instance-configs/acapy-agent/configs/: issuer.yml
instance-configs/acapy-agent/docker/: Dockerfile
instance-configs/caddy/: Caddyfile  Dockerfile
instance-configs/credo-agent/: README.md
instance-configs/database/: docker-compose.yml  (+1 more)
load-agent/: agent.js  agent.ts  config.js  constants.py  locustClient.py  locustFractionMediatorIssueVerify.py  locustIssueMsg.py  locustMediatorIssue.py  locustMediatorIssueAIP2.py  locustMediatorIssueCleanUp.py  locustMediatorIssueDeleteConnection.py  locustMediatorIssueExisting.py  locustMediatorIssueNrCredRevoke.py  locustMediatorIssueRevoke.py  locustMediatorMsg.py  locustMediatorPing.py  locustMediatorPresentProof.py  locustMediatorPresentProofExisting.py  locustPresentProofAIP2.py  package-lock.json  package.json  sample.env  settings.py  tsconfig.json
load-vdr-proxy/: locustIndyVDRProxyCredDef.py  locustIndyVDRProxyDID.py  locustIndyVDRProxyRevRegDef.py  locustIndyVDRProxyRevStatusList.py  locustIndyVDRProxySchema.py
(+55 files in other folders)
