[tool.poetry]
name = "afj-load-testing"
version = "0.1.0"
description = ""
authors = ["Kim Ebert <kim@indicio.tech>, Alexandra Walker <alex.walker@indicio.tech>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
acapy-cache-redis = {git = "https://github.com/Indicio-tech/aries-acapy-cache-redis.git"}
aries-askar = "^0.3"
indy-vdr = "^0.4"
aries-cloudagent = {version = "0.12.1", extras = ["askar", "bbs"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
